tests/rascal/negative/type_errors/L1/14_expression_ES10_D4_4.ob
MODULE Test14;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
               z := 1223;
               r := (z # (- (y + 1223)));
               p := ((+ ((x MOD 2) + y)) = ((+ (1 - x)) MOD 1));
  (* error *)  x := ((1223 - y) - (z - x));
               x := 200;
               p := (z >= 1);
               z := (+ (0 MOD (1223 MOD (200 + 1223))));
               x := (200 DIV 0);
               p := (1 > (+ (1223 DIV x)));
               r := (0 <= (z + y))
END Test14.